Add bliss, and use it to implement GRAPH_AUTOMORPHISM

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,9 @@
+#
+# digraphs: 
+#
+# This file is part of the build system of a GAP kernel extension.
+# Requires automake.
+#
 ACLOCAL_AMFLAGS = -I m4
 
 BINARCHDIR = bin/$(GAPARCH)
@@ -6,6 +12,10 @@ GAPINSTALLLIB = $(abs_top_srcdir)/$(BINARCHDIR)/digraphs.so
 lib_LTLIBRARIES = digraphs.la
 
 digraphs_la_SOURCES = src/digraphs.c
+digraphs_la_SOURCES += src/bliss-0.72/defs.cc src/bliss-0.72/graph.cc src/bliss-0.72/partition.cc
+digraphs_la_SOURCES += src/bliss-0.72/orbit.cc src/bliss-0.72/uintseqhash.cc src/bliss-0.72/heap.cc
+digraphs_la_SOURCES += src/bliss-0.72/timer.cc src/bliss-0.72/utils.cc src/bliss-0.72/bliss_C.cc
+
 digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
 # Note that the latter is only for GAP 4.4.12
 digraphs_la_LDFLAGS = -module -avoid-version
@@ -26,3 +36,7 @@ distclean-local:
 	rm -rf bin/*
 	(cd doc ; ./clean)
 
+doc: doc/manual.six
+
+doc/manual.six: doc/*.xml PackageInfo.g
+	($(GAPROOT)/bin/gap.sh -A makedoc.g)
