--- a/configure.ac
+++ b/configure.ac
@@ -1,31 +1,70 @@
+#
+# digraphs: 
+#
+# This file is part of the build system of a GAP kernel extension.
+# Requires GNU autoconf, GNU automake and GNU libtool.
+#
+
+dnl ##
+dnl ## Setup autoconf
+dnl ##
 AC_PREREQ([2.68])
-LT_PREREQ([2.4.2])
 AC_INIT([digraphs], m4_esyscmd([tr -d '\n' < VERSION]))
 AC_CONFIG_SRCDIR([src/digraphs.c])
 AC_CONFIG_HEADER([src/pkgconfig.h:cnf/pkgconfig.h.in])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([cnf])
-AM_INIT_AUTOMAKE([1.11 -Wall foreign subdir-objects])
 
-AC_PROG_CC
+dnl ##
+dnl ## Get canonical host info
+dnl ##
+AC_CANONICAL_HOST
+
+dnl ##
+dnl ## Setup automake
+dnl ##
+AM_INIT_AUTOMAKE([1.11 -Wall foreign subdir-objects])
+AM_SILENT_RULES([yes])
 AM_PROG_AR
 
-LT_INIT([disable-static dlopen win32-dll])  
+dnl ##
+dnl ## Set the language
+dnl ##
+AC_PROG_CXX
+AC_LANG([C++])
 
-## Find out what the best compiler flags are
-AX_CC_MAXOPT
+dnl ##
+dnl ## Setup libtool (for building the GAP kernel extension)
+dnl ##
+LT_PREREQ([2.4.2])
+LT_INIT([disable-static dlopen win32-dll])
 
+dnl ##
+dnl ## Locate the GAP root dir
+dnl ##
 AC_FIND_GAP
 
+dnl ##
+dnl ## Detect pointer size to distinguish 32 and 64 bit builds
+dnl ##
 AC_CHECK_SIZEOF([void **])
 
-AC_CYGWIN
+dnl ##
+dnl ## Detect Windows resp. Cygwin
+dnl ##
+case $host_os in
+  *cygwin* ) CYGWIN=yes;;
+         * ) CYGWIN=no;;
+esac
 AM_CONDITIONAL([SYS_IS_CYGWIN], [test "$CYGWIN" = "yes"])
 if test "$CYGWIN" = "yes"; then
   AC_DEFINE(SYS_IS_CYGWIN32, 1, are we on CYGWIN?)
 else
   AC_DEFINE(SYS_IS_CYGWIN32, 0, are we on CYGWIN?)
 fi
-     
+
+dnl ##
+dnl ## Output everything
+dnl ##
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
