changing to Graphs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 #
-# digraphs: 
+# graphs: 
 #
 # This file is part of the build system of a GAP kernel extension.
 # Requires automake.
@@ -7,28 +7,28 @@
 ACLOCAL_AMFLAGS = -I m4
 
 BINARCHDIR = bin/$(GAPARCH)
-GAPINSTALLLIB = $(abs_top_srcdir)/$(BINARCHDIR)/digraphs.so
+GAPINSTALLLIB = $(abs_top_srcdir)/$(BINARCHDIR)/graphs.so
 
-lib_LTLIBRARIES = digraphs.la
+lib_LTLIBRARIES = graphs.la
 
-digraphs_la_SOURCES = src/digraphs.c src/homos.c src/perms.c src/schreier-sims.c
-digraphs_la_SOURCES += src/bliss-0.72/defs.cc src/bliss-0.72/graph.cc src/bliss-0.72/partition.cc
-digraphs_la_SOURCES += src/bliss-0.72/orbit.cc src/bliss-0.72/uintseqhash.cc src/bliss-0.72/heap.cc
-digraphs_la_SOURCES += src/bliss-0.72/timer.cc src/bliss-0.72/utils.cc src/bliss-0.72/bliss_C.cc
+graphs_la_SOURCES = src/graphs.c src/homos.c src/perms.c src/schreier-sims.c
+graphs_la_SOURCES += src/bliss-0.72/defs.cc src/bliss-0.72/graph.cc src/bliss-0.72/partition.cc
+graphs_la_SOURCES += src/bliss-0.72/orbit.cc src/bliss-0.72/uintseqhash.cc src/bliss-0.72/heap.cc
+graphs_la_SOURCES += src/bliss-0.72/timer.cc src/bliss-0.72/utils.cc src/bliss-0.72/bliss_C.cc
 
-digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
+graphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
 # Note that the latter is only for GAP 4.4.12
-digraphs_la_LDFLAGS = -module -avoid-version
+graphs_la_LDFLAGS = -module -avoid-version
 if SYS_IS_CYGWIN
-digraphs_la_LDFLAGS += -no-undefined -version-info 0:0:0 -Wl,$(GAPROOT)/bin/$(GAPARCH)/gap.dll
+graphs_la_LDFLAGS += -no-undefined -version-info 0:0:0 -Wl,$(GAPROOT)/bin/$(GAPARCH)/gap.dll
 endif
 
-all-local: digraphs.la
+all-local: graphs.la
 	$(mkdir_p) $(top_srcdir)/$(BINARCHDIR)
 if SYS_IS_CYGWIN
-	cp .libs/digraphs.dll $(GAPINSTALLLIB)
+	cp .libs/graphs.dll $(GAPINSTALLLIB)
 else
-	cp .libs/digraphs.so $(GAPINSTALLLIB)
+	cp .libs/graphs.so $(GAPINSTALLLIB)
 endif
 	@echo "SUCCESS!"
 
