--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,46 +1,52 @@
-name: GitHubPagesForGAP
-version: 0.1
-date: 21/03/2014
-description: A GitHubPages generator for GAP packages
+name: Digraphs
+version: 0.5
+date: 03/03/2016
+description: 
 
 authors:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: A. U. Thor
+    - name: J. De Beule
+      url: http://homepages.vub.ac.be/~jdbeule/
+    - name: J. Jonusas
+      url: http://www-circa.mcs.st-and.ac.uk/~julius
+    - name: J. D. Mitchell
+      url: http://goo.gl/ZtViV6
+    - name: M. Torpey
+      url: http://www-circa.mcs.st-and.ac.uk/~mct25
+    - name: W. Wilson
+      url: http://www-circa.mcs.st-and.ac.uk/~waw7
 
 maintainers:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: Jan Itor
+    - name: J. D. Mitchell
+      url: http://goo.gl/ZtViV6
 
-GAP: ">=4.5.5"
+GAP: ">=4.8.2"
 
 needed-pkgs:
-    - name: "GAPDoc"
-      version: ">= 1.2"
-      url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
-    - name: "IO"
-      version: ">= 4.1"
-      url: "http://neunhoef.github.io/io/"
+    - name: "io"
+      version: ">=4.4.4"
+      url: "http://gap-packages.github.io/io/"
+    - name: "orb"
+      version: ">=4.7.5"
+      url: "https://gap-packages.github.io/orb"
 
 suggested-pkgs:
-    - name: "orb"
-      version: ">= 4.2"
-      url: "http://neunhoef.github.io/orb/"
+    - name: "gapdoc"
+      version: ">=1.5.1"
+      url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
+    - name: "grape"
+      version: ">=4.5"
+      url: "http://www.maths.qmul.ac.uk/~leonard/grape/"
 
-www: http://fingolfin.github.io/GitHubPagesForGAP/
-readme: http://fingolfin.github.io/GitHubPagesForGAP/README
-packageinfo: http://fingolfin.github.io/GitHubPagesForGAP/PackageInfo.g
-github: https://github.com/fingolfin/GitHubPagesForGAP
+www: http://www-groups.mcs.st-andrews.ac.uk/~jamesm/digraphs.php
+readme: http://www-groups.mcs.st-andrews.ac.uk/~jamesm/digraphs/README.md
+packageinfo: http://www-groups.mcs.st-andrews.ac.uk/~jamesm/digraphs/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/fingolfin/GitHubPagesForGAP/releases/download/v0.1/GitHubPagesForGAP-0.1.tar.gz
-    - name: .tar.bz2
-      url: https://github.com/fingolfin/GitHubPagesForGAP/releases/download/v0.1/GitHubPagesForGAP-0.1.tar.bz2
+      url: http://www-groups.mcs.st-andrews.ac.uk/~jamesm/digraphs/digraphs-0.5.tar.gz
 
-abstract: This is a pseudo package that contains no actual  <span class="pkgname">GAP</span> code. Instead, it is a template for other  GAP packages that allows to quickly setup GitHub pages.
+abstract: The <b>Digraphs</b> package is a <b>GAP</b> package containing methods for digraphs and multidigraphs.
 
-status: other
+status: dev
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
