Add -O3 to CXX flags and C flags in Makefile.am
and introduce the handy function DIGRAPHS_IS_OPTIMIZED

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,8 @@ digraphs_la_SOURCES = src/digraphs.c src/homos.c src/perms.c src/schreier-sims.c
 digraphs_la_SOURCES += src/bliss-0.73/defs.cc src/bliss-0.73/graph.cc src/bliss-0.73/partition.cc
 digraphs_la_SOURCES += src/bliss-0.73/orbit.cc src/bliss-0.73/uintseqhash.cc src/bliss-0.73/heap.cc
 digraphs_la_SOURCES += src/bliss-0.73/timer.cc src/bliss-0.73/utils.cc src/bliss-0.73/bliss_C.cc
+digraphs_la_CXXFLAGS = -O3
+digraphs_la_CFLAGS = -O3
 
 digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
 # Note that the latter is only for GAP 4.4.12
