build: add debug make target
Set DEBUG/NDEBUG as a flag rather than manually, fix compiler warnings,
and add gap-debug.h for easier debugging of the kernel module.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,11 +12,13 @@ GAPINSTALLLIB = $(abs_top_srcdir)/$(BINARCHDIR)/digraphs.so
 lib_LTLIBRARIES = digraphs.la
 
 digraphs_la_SOURCES = src/digraphs.c src/homos.c src/perms.c src/schreier-sims.c
-digraphs_la_SOURCES += src/bliss-0.73/defs.cc src/bliss-0.73/graph.cc src/bliss-0.73/partition.cc
-digraphs_la_SOURCES += src/bliss-0.73/orbit.cc src/bliss-0.73/uintseqhash.cc src/bliss-0.73/heap.cc
-digraphs_la_SOURCES += src/bliss-0.73/timer.cc src/bliss-0.73/utils.cc src/bliss-0.73/bliss_C.cc
-digraphs_la_CXXFLAGS = -O3
-digraphs_la_CFLAGS = -O3
+digraphs_la_SOURCES += src/bliss-0.73/defs.cc src/bliss-0.73/graph.cc 
+digraphs_la_SOURCES += src/bliss-0.73/partition.cc src/bliss-0.73/orbit.cc
+digraphs_la_SOURCES += src/bliss-0.73/uintseqhash.cc src/bliss-0.73/heap.cc
+digraphs_la_SOURCES += src/bliss-0.73/timer.cc src/bliss-0.73/utils.cc 
+digraphs_la_SOURCES += src/bliss-0.73/bliss_C.cc
+digraphs_la_CXXFLAGS = -O3 -DNDEBUG
+digraphs_la_CFLAGS = -O3 -DNDEBUG
 
 digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
 # Note that the latter is only for GAP 4.4.12
@@ -42,3 +44,6 @@ doc: doc/manual.six
 
 doc/manual.six: doc/*.xml PackageInfo.g
 	($(GAPROOT)/bin/gap.sh -A makedoc.g)
+
+debug: CFLAGS = -g3 -O0 -Wall -Wextra -Wpedantic -Wold-style-declaration -Wno-unused-parameter -Wtype-limits -Wformat-security -Wpointer-arith -Wno-div-by-zero -Wreturn-type -Wswitch -Wsizeof-array-argument -Wunused-label -fno-omit-frame-pointer -fno-omit-frame-pointer -Wno-c++11-extensions -UNDEBUG -DDEBUG
+debug: clean all
