Add lint make target

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,3 +47,6 @@ doc/manual.six: doc/*.xml PackageInfo.g
 
 debug: CFLAGS = -g3 -O0 -Wall -Wextra -Wpedantic -Wold-style-declaration -Wno-unused-parameter -Wtype-limits -Wformat-security -Wpointer-arith -Wno-div-by-zero -Wreturn-type -Wswitch -Wsizeof-array-argument -Wunused-label -fno-omit-frame-pointer -fno-omit-frame-pointer -Wno-c++11-extensions -UNDEBUG -DDEBUG
 debug: clean all
+
+lint: 
+	gaplint *.g gap/* doc/*.xml
