Add Chris Jefferson and Stuart Burrell as contributors

--- a/_data/package.yml
+++ b/_data/package.yml
@@ -16,8 +16,12 @@ authors:
       url: http://www-circa.mcs.st-andrews.ac.uk/~waw7/
 
 contributors:
+    - name: S. Burrell
+      url: mailto:sb235@st-andrews.ac.uk
     - name: L. Elliott
       url: mailto:le27@st-andrews.ac.uk
+    - name: C. Jefferson
+      url: http://caj.host.cs.st-andrews.ac.uk
     - name: M. Pfeiffer
       url: http://www.morphism.de/~markusp/
     - name: C. Russell
