--- a/src/CPPLINT.cfg
+++ b/src/CPPLINT.cfg
@@ -2,4 +2,4 @@ set noparent
 filter=-build/include_subdir,-runtime/indentation_namespace,-runtime/references, -readability/casting,-runtime/threadsafe_fn, -runtime/int
 linelength=80
 root=pkg
-exclude_files=pkgconfig.h
+exclude_files=(_pkgconfig.h|digraphs-config.h)
