--- a/Makefile.am
+++ b/Makefile.am
@@ -20,9 +20,9 @@ digraphs_la_SOURCES += src/bliss-0.73/bliss_C.cc
 digraphs_la_CXXFLAGS = -O3 -march=native -mpopcnt
 digraphs_la_CFLAGS = -O3 -march=native -mpopcnt
 
-digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS) -DCONFIG_H
-# Note that the latter is only for GAP 4.4.12
-digraphs_la_LDFLAGS = -module -avoid-version
+digraphs_la_CPPFLAGS = $(GAP_CPPFLAGS)
+digraphs_la_CFLAGS = $(GAP_CFLAGS)
+digraphs_la_LDFLAGS = $(GAP_LDFLAGS) -module -avoid-version
 if SYS_IS_CYGWIN
 digraphs_la_LDFLAGS += -no-undefined -version-info 0:0:0 -Wl,$(GAPROOT)/bin/$(GAPARCH)/gap.dll
 endif
